--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -19,10 +19,12 @@
         android:label="GameFragment" >
         <action
             android:id="@+id/action_gameFragment_to_gameWonFragment"
-            app:destination="@id/gameWonFragment" />
+            app:destination="@id/gameWonFragment"
+            app:popUpTo="@+id/gameFragment" />
         <action
             android:id="@+id/action_gameFragment_to_gameOverFragment2"
-            app:destination="@id/gameOverFragment2" />
+            app:destination="@id/gameOverFragment2"
+            app:popUpTo="@+id/gameFragment" />
     </fragment>
     <fragment
         android:id="@+id/gameWonFragment"
@@ -33,5 +35,10 @@
         android:id="@+id/gameOverFragment2"
         android:name="com.example.android.navigation.GameOverFragment"
         android:label="fragment_game_over"
-        tools:layout="@layout/fragment_game_over" />
+        tools:layout="@layout/fragment_game_over" >
+        <action
+            android:id="@+id/action_gameOverFragment2_to_gameFragment"
+            app:destination="@id/gameFragment"
+            app:popUpTo="@+id/titileFragment" />
+    </fragment>
 </navigation>
